--- a/smuzi/css/style.css
+++ b/smuzi/css/style.css
@@ -889,6 +889,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     width: 100%;
     height: 60px;   
     text-align: center;
+    position: relative;
 }
 
 .footer__samp{
@@ -898,7 +899,30 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     padding-top: 20px;;
 }
 
+.footer__samp::after{
+    position: absolute;
+    content: "Go top";
+    right: 160px;
+    font-family: Muli;
+    font-size: 16px;
+    line-height: 40px;
+    font-weight: 700;
+    letter-spacing: -0.02em;
+    color: #ffffff;
+}
 
 .footer__btn{
 
+}
+
+.footer__btn::after{
+    position: absolute;
+    content: url("../img/arrow-copy.png");
+    width: 53px;
+    height: 53px;
+    background-color: #f2662f;
+    border-radius: 5px;
+    padding-top: 15px;
+    right: 70px;
+    bottom: 37px;
 }
