--- a/smuzi/css/style.css
+++ b/smuzi/css/style.css
@@ -37,6 +37,15 @@ a{font-family: inherit; color: inherit; font-size: inherit;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
+@font-face {
+    font-family: "Muli";
+    src: url("../fonts/Muli-Bold.ttf");
+    src: url("../fonts/Muli-BoldItalic.ttf");
+    src: url("../fonts/Muli-ExtraBold.woff");
+    src: url("../fonts/Muli-Italic.ttf");
+    src: url("../fonts/Muli-Regular.woff");
+    src: url("../fonts/Muli-Semi-BoldItalic.ttf");
+} 
 
 
 
@@ -140,10 +149,11 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     margin-right: 35px;
 }
 .social__link{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 35px;
     height: 35px;
-    text-align: center;
     background-color: #ffffff;
     border-radius: 50%;
     line-height: 2.3;
@@ -151,14 +161,14 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    padding: 6px;
+    
 }
 .social__img{}
 
 .header__content{
     text-align: center;
     margin-top: 109px;
-    position: relative;
+    
 
 }
 
@@ -168,18 +178,19 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     height: 70px;
     background-color: #0aa566;
     border-radius: 35px;
-    font-family: 'Muli';
+    font-family: Muli;
     font-size: 24px;
     line-height: 40px;
     font-weight: 800;
     letter-spacing: -0.02em;
     color: #ffffff;
+    position: relative;
 }
 
 .header__btn::after {
     content: url("../img/arrow.png");
     position: absolute;
-    left: 1035px;
+    right: 25px;
     top: 15px;
 }
 
@@ -255,20 +266,23 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .about{
-    background-color: #16816f;
+    background-color: #16816f;    
+}
+
+.about__wrapper{
     display: flex;
-    
+    justify-content: center;
 }
 
 .about__box {
-    margin-left: 140px;
     
 }
 
 
 
 .about__img{
-    
+    position: relative;
+    top: 80px; 
 }
 
 .about__content{
@@ -499,9 +513,8 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .story__content{
-     margin-top: 120px;  
-     margin-bottom: 160px;
-     position: relative;
+    margin: 120px 0 160px 200px;  
+    position: relative;
     
 }
 
@@ -519,6 +532,10 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 .testimonials{
     background-color:#662f1a;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 118px 0;
     
 }
 
@@ -559,7 +576,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 .testimonials__inner::after{
     content: url("../img/sarah.png");
     position: absolute;
-    left: 400px;
+    right: 125px;
     bottom: 101px;
     z-index: 1;
 }
@@ -591,24 +608,28 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
 .testimonials__arrow-left{
     position: relative;
+    width: 200px;
+    background-color: transparent;
+    border: none;
 }
 
 .testimonials__arrow-left::before{
     position: absolute;
     content: url("../img/arrow-left.png");
-    left: 850px;
-    bottom: 80px;
+    left: 0;
+    
 }
 
 .testimonials__arrow-right{
     position: relative;
+    background-color: transparent;
+    border: none;
 }
 
 .testimonials__arrow-right::after{
     content: url("../img/arrow.png");
     position: absolute;
-    left: 1000px;
-    bottom: 80px;
+    
 }
 
 .blog{
@@ -663,7 +684,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .blog__data{
-    font-family: Muli;
+    font-family: "Muli";
     font-size: 10px;
     line-height: 35px;
     font-weight: 400;
@@ -693,7 +714,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 .instagram{
-    position: relative;
+    
 }
 
 .instagram__title{
@@ -703,32 +724,34 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     font-weight: 800;
     letter-spacing: -0.02em;
     color: #0aa566;   
-    text-align: center;
+    display: flex;
+    justify-content: center;
     
 }
 
 .instagram__title::before{
     content: url("../img/insta-green.png");
-    position: absolute;
-    left: 840px;
+    position: relative;
+    left: -10px;
     top: 5px;
 }
 
 .instagram__box{
     display: flex;
     margin-top: 45px;  
-    position: relative;
+    
 
 }
 
 .instagram__card{
     width: 25%;
+    position: relative;
 }
 
 .instagram__card::after{
     position: absolute;
     content: url("../img/insta-white.png");
-    left: 300px;
+    right: 20px;
     bottom: 5px;
 }
 
@@ -820,7 +843,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    position: relative;
+    ;
 }
 
 .subscribe__registr{
@@ -836,12 +859,13 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     letter-spacing: -0.02em;
     color: #6d450c;
     padding: 0 25px 0 65px;
-    
+    position: relative
 }
 
-.subscribe__registr::after{
+.subscribe__registr::before{
     position: absolute;
-    content: url("../img/letter.png");
+    content: "";
+    background-image: url("../img/letter.png");
 }
 
 
@@ -856,12 +880,13 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     margin: 60px 0 0 185px;
     border: none;
     background-color: #f9ad3e;
+    position: relative;
 }
 
 .subscribe__btn::before{
     position: absolute;
     content: url("../img/arrow-footer.png");
-    left: 125px;
+    left: -65px;
     bottom: 0;
 }
 
@@ -874,9 +899,9 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
 .subscribe__list{
     display: flex;
-    position: absolute;
+    position: relative;
     left: 320px;
-    bottom: 10px;
+    bottom: 32px;
 }
 
 .subscribe__item{
@@ -884,7 +909,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 }
 
 
-.footer__copyright{
+.footer__bottom{
     background-color:#6c291d;
     width: 100%;
     height: 60px;   
